deploy: 6f8460560676804b7aba1e35de6eda7db759ccc1

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <li class="level3 nav-leaf"><a href="concepts/frame-canvas.html">Frame and Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="concepts/effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="interact/">Interactivity</a></li>
+                    <li class="level3 nav-leaf"><a href="interact/reactor.html">Reactor</a></li>
                     <li class="level3 nav-leaf"><a href="interact/animation.html">Animations</a></li>
                     <li class="level3 nav-leaf"><a href="interact/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="reference/">Reference</a></li>
@@ -146,6 +147,7 @@
             <li class="level3 nav-leaf"><a href="concepts/frame-canvas.html">Frame and Canvas</a></li>
             <li class="level3 nav-leaf"><a href="concepts/effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="interact/">Interactivity</a></li>
+            <li class="level3 nav-leaf"><a href="interact/reactor.html">Reactor</a></li>
             <li class="level3 nav-leaf"><a href="interact/animation.html">Animations</a></li>
             <li class="level3 nav-leaf"><a href="interact/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="reference/">Reference</a></li>
