--- a/interact/animation.html
+++ b/interact/animation.html
@@ -78,6 +78,7 @@
                     <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="index.html">Interactivity</a></li>
+                    <li class="level3 nav-leaf"><a href="reactor.html">Reactor</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Animations</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -146,6 +147,7 @@
             <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="index.html">Interactivity</a></li>
+            <li class="level3 nav-leaf"><a href="reactor.html">Reactor</a></li>
             <li class="level3 active nav-leaf"><a href="#">Animations</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -218,7 +220,7 @@
 <div class="doodle" id="simple"></div>
 <script>Simple.ball("simple")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="index.html">←Interactivity</a> <a class="pagenav" href="examples.html">Examples→</a>
+            <a class="pagenav" href="reactor.html">←Reactor</a> <a class="pagenav" href="examples.html">Examples→</a>
           </div>
         </div>
         <footer>
