--- a/interact/examples.html
+++ b/interact/examples.html
@@ -78,6 +78,7 @@
                     <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="index.html">Interactivity</a></li>
+                    <li class="level3 nav-leaf"><a href="reactor.html">Reactor</a></li>
                     <li class="level3 nav-leaf"><a href="animation.html">Animations</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
                     <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -146,6 +147,7 @@
             <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="index.html">Interactivity</a></li>
+            <li class="level3 nav-leaf"><a href="reactor.html">Reactor</a></li>
             <li class="level3 nav-leaf"><a href="animation.html">Animations</a></li>
             <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
             <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
