--- a/interact/index.html
+++ b/interact/index.html
@@ -78,6 +78,7 @@
                     <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
                     <li class="level2 active nav-node"><a href="#">Interactivity</a></li>
+                    <li class="level3 nav-leaf"><a href="reactor.html">Reactor</a></li>
                     <li class="level3 nav-leaf"><a href="animation.html">Animations</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -146,6 +147,7 @@
             <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
             <li class="level2 active nav-node"><a href="#">Interactivity</a></li>
+            <li class="level3 nav-leaf"><a href="reactor.html">Reactor</a></li>
             <li class="level3 nav-leaf"><a href="animation.html">Animations</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -180,7 +182,7 @@
           <div id="content"><h1 id="interactivity" class="title">Interactivity</h1>
 <p>Doodle supports animations that react to user inputs such as mouse clicks. This chapter describes these features. It begins with the tools provided for creating animations, and then discusses how to add interactivity into them.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="../concepts/effects.html">←Effects</a> <a class="pagenav" href="animation.html">Animations→</a>
+            <a class="pagenav" href="../concepts/effects.html">←Effects</a> <a class="pagenav" href="reactor.html">Reactor→</a>
           </div>
         </div>
         <footer>
