--- a/pictures/size.html
+++ b/pictures/size.html
@@ -78,6 +78,7 @@
                     <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
                     <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="../interact/">Interactivity</a></li>
+                    <li class="level3 nav-leaf"><a href="../interact/reactor.html">Reactor</a></li>
                     <li class="level3 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
                     <li class="level3 nav-leaf"><a href="../interact/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -146,6 +147,7 @@
             <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
             <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="../interact/">Interactivity</a></li>
+            <li class="level3 nav-leaf"><a href="../interact/reactor.html">Reactor</a></li>
             <li class="level3 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
             <li class="level3 nav-leaf"><a href="../interact/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
@@ -206,10 +208,10 @@ This is necessary because the size may depend on backend-specific calculations, 
       .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">hotPink</span><span>)
       .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">3.0</span><span>)
   )
-</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@509d14a9
+</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@775b3029
 </span><span>  
 </span><span class="keyword">val</span><span> </span><span class="identifier">picture</span><span> = </span><span class="identifier">circle</span><span>.</span><span class="identifier">on</span><span>(</span><span class="identifier">boundingBox</span><span>)
-</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@25fb5648</span></code></pre>
+</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@394b8206</span></code></pre>
 <p>This produces the picture shown below.</p>
 <div class="default-image-block">
   <img src="bounding-box.png" alt="A circle with a bounding box" title="A circle with a bounding box">
