deploy: 35dce47f7e0bcc16a75f390eb17fabef5f966418

--- a/pictures/filter.html
+++ b/pictures/filter.html
@@ -305,7 +305,7 @@
 )
 
 </span><span class="keyword">val</span><span> </span><span class="identifier">shape</span><span> = </span><span class="identifier">text</span><span>(</span><span class="string-literal">&quot;Convolution&quot;</span><span>)
-  .</span><span class="identifier">font</span><span>(</span><span class="type-name">Font</span><span>.</span><span class="identifier">defaultSerif</span><span>.</span><span class="identifier">bold</span><span>.</span><span class="identifier">italic</span><span>.</span><span class="identifier">size</span><span>(</span><span class="type-name">FontSize</span><span>.</span><span class="identifier">points</span><span>(</span><span class="number-literal">36</span><span>)))
+  .</span><span class="identifier">font</span><span>(</span><span class="type-name">Font</span><span>.</span><span class="identifier">defaultSerif</span><span>.</span><span class="identifier">withBold</span><span>.</span><span class="identifier">withItalic</span><span>.</span><span class="identifier">withSize</span><span>(</span><span class="type-name">FontSize</span><span>.</span><span class="identifier">points</span><span>(</span><span class="number-literal">36</span><span>)))
   .</span><span class="identifier">fillGradient</span><span>(
     </span><span class="type-name">Gradient</span><span>.</span><span class="identifier">linear</span><span>(
       </span><span class="type-name">Point</span><span>(</span><span class="number-literal">0</span><span>, </span><span class="number-literal">0</span><span>),
