--- a/java2d/bitmap.html
+++ b/java2d/bitmap.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-node"><a href="index.html">Java2D Backend</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Bitmaps in Java2D</a></li>
                     <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
+                    <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
@@ -159,6 +160,7 @@
             <li class="level2 nav-node"><a href="index.html">Java2D Backend</a></li>
             <li class="level3 active nav-leaf"><a href="#">Bitmaps in Java2D</a></li>
             <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
+            <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
