--- a/java2d/index.html
+++ b/java2d/index.html
@@ -90,6 +90,7 @@
                     <li class="level2 active nav-node"><a href="#">Java2D Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Java2D</a></li>
                     <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
+                    <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
@@ -159,6 +160,7 @@
             <li class="level2 active nav-node"><a href="#">Java2D Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Java2D</a></li>
             <li class="level3 nav-leaf"><a href="repl.html">Working at the REPL</a></li>
+            <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
@@ -234,8 +236,7 @@ Here&#39;s a small example:</p>
     </span><span class="comment">// Do stuff here
 </span><span>    </span><span class="comment">// This example just closes the canvas
 </span><span>    </span><span class="identifier">canvas</span><span>.</span><span class="identifier">close</span><span>()
-  }</span></code></pre>
-<p>`</p></div>
+  }</span></code></pre></div>
           <div class="flex flex-row justify-between">
             <a class="pagenav" href="../reference/using.html">←Using Algebras</a> <a class="pagenav" href="bitmap.html">Bitmaps in Java2D→</a>
           </div>
