--- a/java2d/repl.html
+++ b/java2d/repl.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-node"><a href="index.html">Java2D Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Java2D</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Working at the REPL</a></li>
+                    <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
@@ -159,6 +160,7 @@
             <li class="level2 nav-node"><a href="index.html">Java2D Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Java2D</a></li>
             <li class="level3 active nav-leaf"><a href="#">Working at the REPL</a></li>
+            <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
@@ -192,7 +194,7 @@ until the window is closed before returning control after drawing a <code>Pictur
 control will return immediately. This is useful when working in the REPL and you
 want to quickly view pictures as you make changes.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="bitmap.html">←Bitmaps in Java2D</a> <a class="pagenav" href="../svg/">SVG Backend→</a>
+            <a class="pagenav" href="bitmap.html">←Bitmaps in Java2D</a> <a class="pagenav" href="fonts.html">Fonts and Text→</a>
           </div>
         </div>
         <footer>
