--- a/svg/examples.html
+++ b/svg/examples.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
+                    <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
@@ -159,6 +160,7 @@
             <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
+            <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
