--- a/svg/index.html
+++ b/svg/index.html
@@ -90,6 +90,7 @@
                     <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
+                    <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
                     <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
@@ -159,6 +160,7 @@
             <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
+            <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
             <li class="level2 active nav-node"><a href="#">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
@@ -210,7 +212,7 @@
   
 </span><span class="identifier">circle</span><span>.</span><span class="identifier">write</span><span>[</span><span class="type-name">Svg</span><span>](</span><span class="string-literal">&quot;circle.svg&quot;</span><span>)</span></code></pre></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="../java2d/repl.html">←Working at the REPL</a> <a class="pagenav" href="bitmap.html">Bitmaps in SVG→</a>
+            <a class="pagenav" href="../java2d/fonts.html">←Fonts and Text</a> <a class="pagenav" href="bitmap.html">Bitmaps in SVG→</a>
           </div>
         </div>
         <footer>
