deploy: b6613f0309009927949eb79d6bec26af09688bcf

--- a/java2d/repl.html
+++ b/java2d/repl.html
@@ -92,7 +92,7 @@
                     <li class="level3 active nav-leaf"><a href="#">Working at the REPL</a></li>
                     <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
@@ -162,7 +162,7 @@
             <li class="level3 active nav-leaf"><a href="#">Working at the REPL</a></li>
             <li class="level3 nav-leaf"><a href="fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
-            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
