--- a/svg/tagging.html
+++ b/svg/tagging.html
@@ -92,7 +92,7 @@
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Tagging Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
@@ -162,7 +162,7 @@
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
-            <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
             <li class="level3 active nav-leaf"><a href="#">Tagging Pictures</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
@@ -209,7 +209,7 @@ benefit from removing these limitations, please join our Discord and mention
 this. Also note this only works on SVG, and attempting to use it with a
 different backend will fail to compile.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="bitmap.html">←Bitmaps in SVG</a> <a class="pagenav" href="examples.html">Examples→</a>
+            <a class="pagenav" href="bitmap.html">←Images in SVG</a> <a class="pagenav" href="examples.html">Examples→</a>
           </div>
         </div>
         <footer>
