--- a/canvas/index.html
+++ b/canvas/index.html
@@ -92,7 +92,7 @@
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
                     <li class="level2 active nav-node"><a href="#">Canvas Backend</a></li>
@@ -162,7 +162,7 @@
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
-            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
             <li class="level2 active nav-node"><a href="#">Canvas Backend</a></li>
