--- a/svg/examples.html
+++ b/svg/examples.html
@@ -92,7 +92,7 @@
                     <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
                     <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
-                    <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+                    <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
@@ -162,7 +162,7 @@
             <li class="level3 nav-leaf"><a href="../java2d/repl.html">Working at the REPL</a></li>
             <li class="level3 nav-leaf"><a href="../java2d/fonts.html">Fonts and Text</a></li>
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
-            <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in SVG</a></li>
+            <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
             <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
