--- a/svg/tagging.html
+++ b/svg/tagging.html
@@ -203,10 +203,23 @@ For example, we can add a hyperlink to an element within a SVG drawing using the
 wrapped around the SVG drawing on which they are called. Note that should only
 use tags in the SVG namespace. Mixing HTML and SVG tags will likely result in a
 drawing that does not render. </p>
-<p>This functionality currently does not allow you add attributes to SVG output,
-nor add tags that do not surround a SVG picture created via Doodle. If you would
+<p>This functionality currently does not allow you add tags that do not surround a SVG picture created via Doodle. If you would
 benefit from removing these limitations, please join our Discord and mention
-this. Also note this only works on SVG, and attempting to use it with a
+this. </p>
+<pre><code class="nohighlight"><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">core</span><span>.*
+</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">svg</span><span>.*
+</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">svg</span><span>.</span><span class="identifier">syntax</span><span>.</span><span class="identifier">all</span><span>.*
+</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">syntax</span><span>.</span><span class="identifier">all</span><span>.*
+
+</span><span class="type-name">Picture</span><span>
+  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">7</span><span>, </span><span class="number-literal">15</span><span>)
+  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">5.0</span><span>)
+  .</span><span class="identifier">beside</span><span>(</span><span class="type-name">Picture</span><span>.</span><span class="identifier">text</span><span>(</span><span class="string-literal">&quot;Creative Scala&quot;</span><span>).</span><span class="identifier">noStroke</span><span>.</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">black</span><span>))
+  .</span><span class="identifier">attribute</span><span>(</span><span class="string-literal">&quot;id&quot;</span><span>,</span><span class="string-literal">&quot;referenceable&quot;</span><span>)</span></code></pre>
+<p>This produces the output shown below.</p>
+<div class="doodle" id="draw-link"></div>
+<script>SvgAttributedExamples.drawWithAttribute("draw-link")</script>
+<p>Note this only works on SVG, and attempting to use it with a
 different backend will fail to compile.</p></div>
           <div class="flex flex-row justify-between">
             <a class="pagenav" href="bitmap.html">←Images in SVG</a> <a class="pagenav" href="examples.html">Examples→</a>
