deploy: 002fa0d260d8bbd685c34b900ff174d888b24f97

--- a/svg/bitmap.html
+++ b/svg/bitmap.html
@@ -94,6 +94,7 @@
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
+                    <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -164,6 +165,7 @@
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 active nav-leaf"><a href="#">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
+            <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
