--- a/svg/tagging.html
+++ b/svg/tagging.html
@@ -94,6 +94,7 @@
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Tagging Pictures</a></li>
+                    <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -164,6 +165,7 @@
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
             <li class="level3 active nav-leaf"><a href="#">Tagging Pictures</a></li>
+            <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -230,7 +232,7 @@ this. </p>
 <p>Note this only works on SVG, and attempting to use it with a
 different backend will fail to compile.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="bitmap.html">←Images in SVG</a> <a class="pagenav" href="examples.html">Examples→</a>
+            <a class="pagenav" href="bitmap.html">←Images in SVG</a> <a class="pagenav" href="blend.html">Blend Modes→</a>
           </div>
         </div>
         <footer>
