--- a/canvas/bitmap.html
+++ b/canvas/bitmap.html
@@ -94,6 +94,7 @@
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Bitmaps in Canvas</a></li>
@@ -164,6 +165,7 @@
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
             <li class="level3 active nav-leaf"><a href="#">Bitmaps in Canvas</a></li>
