--- a/pictures/size.html
+++ b/pictures/size.html
@@ -94,6 +94,7 @@
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
+                    <li class="level3 nav-leaf"><a href="../svg/blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -164,6 +165,7 @@
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/tagging.html">Tagging Pictures</a></li>
+            <li class="level3 nav-leaf"><a href="../svg/blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -210,10 +212,10 @@ This is necessary because the size may depend on backend-specific calculations, 
       .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">hotPink</span><span>)
       .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">3.0</span><span>)
   )
-</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@4eb0e22d
+</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@307b1ef
 </span><span>  
 </span><span class="keyword">val</span><span> </span><span class="identifier">picture</span><span> = </span><span class="identifier">circle</span><span>.</span><span class="identifier">on</span><span>(</span><span class="identifier">boundingBox</span><span>)
-</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@1a94a9c2</span></code></pre>
+</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@3b20ec23</span></code></pre>
 <p>This produces the picture shown below.</p>
 <div class="default-image-block">
   <img src="bounding-box.png" alt="A circle with a bounding box" title="A circle with a bounding box">
