--- a/svg/examples.html
+++ b/svg/examples.html
@@ -94,6 +94,7 @@
                     <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
+                    <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -164,6 +165,7 @@
             <li class="level2 nav-node"><a href="index.html">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Images in SVG</a></li>
             <li class="level3 nav-leaf"><a href="tagging.html">Tagging Pictures</a></li>
+            <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
             <li class="level3 active nav-leaf"><a href="#">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
@@ -210,7 +212,7 @@
 <div class="doodle" id="hello"></div>
 <script>SvgTextExamples.drawFont("hello")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="tagging.html">←Tagging Pictures</a> <a class="pagenav" href="../canvas/">Canvas Backend→</a>
+            <a class="pagenav" href="blend.html">←Blend Modes</a> <a class="pagenav" href="../canvas/">Canvas Backend→</a>
           </div>
         </div>
         <footer>
