--- a/svg/blend.html
+++ b/svg/blend.html
@@ -184,40 +184,57 @@
       <div id="contentbar" class="mx-auto flex-1">
         <div class="max-w-prose mx-auto">
           <div id="content"><h1 id="blend-modes" class="title">Blend Modes</h1>
-<p>The SVG backend supports CSS-style blend modes for creating compositing effects.
-Blend modes control how colors from one element interact with the colors beneath it,
-enabling effects like screen blending, color burning, and more.</p>
-
-<h2 id="how-blend-modes-work" class="section">How Blend Modes Work</h2>
-<p>Blend modes use the CSS <code>mix-blend-mode</code> property to determine how a drawing element&#39;s
-colors are merged with the background. This allows you to create effects without needing
-to manipulate pixel values directly.</p>
+<p>The SVG backend supports <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/blend-mode">CSS-style blend modes</a> for creating compositing effects.
+Blend modes control how colors from one element interact with the colors beneath it.
+By default an color simply overwrites what is beneath, 
+but by changing the blend mode you can make the two colors interact in creative ways.</p>
 
 <h2 id="using-blend-modes" class="section">Using Blend Modes</h2>
-<p>The following blend mode extension methods are available on <code>Picture</code>:</p>
+<p>The SVG backend supports the following blend modes:</p>
 <ul>
-  <li><code>.screen</code> — Lightens by inverting, multiplying, and inverting again</li>
-  <li><code>.burn</code> — Darkens by inverting the blend</li>
-  <li><code>.dodge</code> — Lightens by inverting the base</li>
-  <li><code>.lighten</code> — Selects the lighter color</li>
-  <li><code>.sourceOver</code> — Standard opacity blending (default)</li>
+  <li>screen: lightens by inverting, multiplying, and inverting again.</li>
+  <li>burn: darkens by inverting the bottom, dividing by the top, and inverting again. Corresponds to CSS <code>color-burn</code>.</li>
+  <li>dodge: divide the bottom by the inverse of the top. Corresponds to CSS <code>color-dodge</code>.</li>
+  <li>lighten: selects the lighter color.</li>
+  <li>sourceOver: the default, in which the top color overwrites whatever is below it. Corresponds to CSS <code>normal</code>.</li>
 </ul>
-<p>Here&#39;s a minimal usage example:</p>
+<p>Here&#39;s an example showing three polygons blended together with <code>screen</code> and <code>dodge</code>.</p>
 <pre><code class="nohighlight"><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">core</span><span>.*
 </span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">svg</span><span>.*
 </span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">syntax</span><span>.</span><span class="identifier">all</span><span>.*
 
-</span><span class="keyword">val</span><span> </span><span class="identifier">red</span><span> = </span><span class="type-name">Picture</span><span>.</span><span class="identifier">circle</span><span>(</span><span class="number-literal">50</span><span>).</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">red</span><span>).</span><span class="identifier">noStroke</span><span>
-</span><span class="keyword">val</span><span> </span><span class="identifier">blue</span><span> = </span><span class="type-name">Picture</span><span>.</span><span class="identifier">circle</span><span>(</span><span class="number-literal">50</span><span>).</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">blue</span><span>).</span><span class="identifier">noStroke</span><span>.</span><span class="identifier">translateX</span><span>(</span><span class="number-literal">40</span><span>)
+</span><span class="keyword">val</span><span> </span><span class="identifier">red</span><span> = </span><span class="type-name">Picture</span><span>
+  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">5</span><span>, </span><span class="number-literal">50</span><span>)
+  .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">indianRed</span><span>)
+  .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">mediumPurple</span><span>)
+  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">7</span><span>)
 
-</span><span class="comment">// Apply screen blend mode to the blue circle
-</span><span class="keyword">val</span><span> </span><span class="identifier">blended</span><span> = </span><span class="identifier">red</span><span>.</span><span class="identifier">beside</span><span>(</span><span class="identifier">blue</span><span>.</span><span class="identifier">screen</span><span>)</span></code></pre>
-<p>The rendered result will show the overlapping area with the blend effect applied,
-lightening the colors where the circles overlap.</p>
+</span><span class="keyword">val</span><span> </span><span class="identifier">green</span><span> = </span><span class="type-name">Picture</span><span>
+  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">7</span><span>, </span><span class="number-literal">50</span><span>)
+  .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">lawnGreen</span><span>)
+  .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">forestGreen</span><span>)
+  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">7</span><span>)
 
-<h2 id="browser-rendering" class="section">Browser Rendering</h2>
-<p>Blend modes are rendered using native SVG and CSS support, ensuring good performance
-and visual fidelity. They work in all modern browsers that support the <code>mix-blend-mode</code> CSS property.</p></div>
+</span><span class="keyword">val</span><span> </span><span class="identifier">blue</span><span> = </span><span class="type-name">Picture</span><span>
+  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">9</span><span>, </span><span class="number-literal">50</span><span>)
+  .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">dodgerBlue</span><span>)
+  .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">lavenderBlush</span><span>)
+  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">7</span><span>)
+
+</span><span class="identifier">red</span><span>
+  .</span><span class="identifier">at</span><span>(</span><span class="type-name">Landmark</span><span>.</span><span class="identifier">centerLeft</span><span>)
+  .</span><span class="identifier">screen</span><span>
+  .</span><span class="identifier">on</span><span>(</span><span class="identifier">blue</span><span>.</span><span class="identifier">at</span><span>(</span><span class="type-name">Landmark</span><span>.</span><span class="identifier">centerRight</span><span>).</span><span class="identifier">dodge</span><span>)
+  .</span><span class="identifier">on</span><span>(</span><span class="identifier">green</span><span>)</span></code></pre>
+<p>This produces the following:</p>
+<div class="doodle" id="polygons"></div>
+<script>SvgBlendModes.polygons("polygons")</script>
+<p>The following picture shows examples of all the blend modes, where the red and blue circles are placed on top of the green circle and both blended with the given mode.</p>
+<div class="doodle" id="blend-table"></div>
+<script>SvgBlendModes.table("blend-table")</script>
+
+<h2 id="implementation-notes" class="section">Implementation Notes</h2>
+<p>Blend modes are rendered using the <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/mix-blend-mode">CSS <code>mix-blend-mode</code></a> property. At the time of writing there are still a few browsers, mainly on mobile devices, that don&#39;t support this feature on SVG elements. Check <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/mix-blend-mode#browser_compatibility">compatibility</a> for your use case.</p></div>
           <div class="flex flex-row justify-between">
             <a class="pagenav" href="tagging.html">←Tagging Pictures</a> <a class="pagenav" href="examples.html">Examples→</a>
           </div>
@@ -235,9 +252,8 @@ and visual fidelity. They work in all modern browsers that support the <code>mix
         <div class="max-h-[calc(100vh-6rem)] overflow-y-auto">
           <p>On This Page</p>
           <ul class="nav-list">
-            <li class="level1 nav-leaf"><a href="#how-blend-modes-work">How Blend Modes Work</a></li>
             <li class="level1 nav-leaf"><a href="#using-blend-modes">Using Blend Modes</a></li>
-            <li class="level1 nav-leaf"><a href="#browser-rendering">Browser Rendering</a></li>
+            <li class="level1 nav-leaf"><a href="#implementation-notes">Implementation Notes</a></li>
           </ul>
         </div>
       </nav>
