deploy: ca5ea19353329134b0289c902129653ab47d8a3c

--- a/canvas/examples.html
+++ b/canvas/examples.html
@@ -65,6 +65,7 @@
                     <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/filter.html">Convolution Filters</a></li>
+                    <li class="level3 nav-leaf"><a href="../pictures/blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/size.html">Size</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
@@ -98,6 +99,7 @@
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Canvas</a></li>
+                    <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
                     <li class="level3 active nav-leaf"><a href="#">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
                     <li class="level3 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
@@ -136,6 +138,7 @@
             <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/filter.html">Convolution Filters</a></li>
+            <li class="level3 nav-leaf"><a href="../pictures/blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/size.html">Size</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
@@ -169,6 +172,7 @@
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="index.html">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="bitmap.html">Bitmaps in Canvas</a></li>
+            <li class="level3 nav-leaf"><a href="blend.html">Blend Modes</a></li>
             <li class="level3 active nav-leaf"><a href="#">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
             <li class="level3 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
@@ -199,7 +203,7 @@
 <div class="doodle" id="frame-background"></div>
 <script>CanvasFrameBackground.draw("frame-background")</script></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="bitmap.html">←Bitmaps in Canvas</a> <a class="pagenav" href="layout-examples.html">Layout Examples→</a>
+            <a class="pagenav" href="blend.html">←Blend Modes</a> <a class="pagenav" href="layout-examples.html">Layout Examples→</a>
           </div>
         </div>
         <footer>
