--- a/svg/blend.html
+++ b/svg/blend.html
@@ -65,6 +65,7 @@
                     <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/filter.html">Convolution Filters</a></li>
+                    <li class="level3 nav-leaf"><a href="../pictures/blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/size.html">Size</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
@@ -98,6 +99,7 @@
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
                     <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
+                    <li class="level3 nav-leaf"><a href="../canvas/blend.html">Blend Modes</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
                     <li class="level3 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
@@ -136,6 +138,7 @@
             <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/filter.html">Convolution Filters</a></li>
+            <li class="level3 nav-leaf"><a href="../pictures/blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/size.html">Size</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
@@ -169,6 +172,7 @@
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
             <li class="level2 nav-node"><a href="../canvas/">Canvas Backend</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/bitmap.html">Bitmaps in Canvas</a></li>
+            <li class="level3 nav-leaf"><a href="../canvas/blend.html">Blend Modes</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
             <li class="level3 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
@@ -184,54 +188,8 @@
       <div id="contentbar" class="mx-auto flex-1">
         <div class="max-w-prose mx-auto">
           <div id="content"><h1 id="blend-modes" class="title">Blend Modes</h1>
-<p>The SVG backend supports <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/blend-mode">CSS-style blend modes</a> for creating compositing effects.
-Blend modes control how colors from one element interact with the colors beneath it.
-By default an color simply overwrites what is beneath, 
-but by changing the blend mode you can make the two colors interact in creative ways.</p>
-
-<h2 id="using-blend-modes" class="section">Using Blend Modes</h2>
-<p>The SVG backend supports the following blend modes:</p>
-<ul>
-  <li>screen: lightens by inverting, multiplying, and inverting again.</li>
-  <li>burn: darkens by inverting the bottom, dividing by the top, and inverting again. Corresponds to CSS <code>color-burn</code>.</li>
-  <li>dodge: divide the bottom by the inverse of the top. Corresponds to CSS <code>color-dodge</code>.</li>
-  <li>lighten: selects the lighter color.</li>
-  <li>sourceOver: the default, in which the top color overwrites whatever is below it. Corresponds to CSS <code>normal</code>.</li>
-</ul>
-<p>Here&#39;s an example showing three polygons blended together with <code>screen</code> and <code>dodge</code>.</p>
-<pre><code class="nohighlight"><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">core</span><span>.*
-</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">svg</span><span>.*
-</span><span class="keyword">import</span><span> </span><span class="identifier">doodle</span><span>.</span><span class="identifier">syntax</span><span>.</span><span class="identifier">all</span><span>.*
-
-</span><span class="keyword">val</span><span> </span><span class="identifier">red</span><span> = </span><span class="type-name">Picture</span><span>
-  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">5</span><span>, </span><span class="number-literal">50</span><span>)
-  .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">indianRed</span><span>)
-  .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">mediumPurple</span><span>)
-  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">7</span><span>)
-
-</span><span class="keyword">val</span><span> </span><span class="identifier">green</span><span> = </span><span class="type-name">Picture</span><span>
-  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">7</span><span>, </span><span class="number-literal">50</span><span>)
-  .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">lawnGreen</span><span>)
-  .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">forestGreen</span><span>)
-  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">7</span><span>)
-
-</span><span class="keyword">val</span><span> </span><span class="identifier">blue</span><span> = </span><span class="type-name">Picture</span><span>
-  .</span><span class="identifier">regularPolygon</span><span>(</span><span class="number-literal">9</span><span>, </span><span class="number-literal">50</span><span>)
-  .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">dodgerBlue</span><span>)
-  .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">lavenderBlush</span><span>)
-  .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">7</span><span>)
-
-</span><span class="identifier">red</span><span>
-  .</span><span class="identifier">at</span><span>(</span><span class="type-name">Landmark</span><span>.</span><span class="identifier">centerLeft</span><span>)
-  .</span><span class="identifier">screen</span><span>
-  .</span><span class="identifier">on</span><span>(</span><span class="identifier">blue</span><span>.</span><span class="identifier">at</span><span>(</span><span class="type-name">Landmark</span><span>.</span><span class="identifier">centerRight</span><span>).</span><span class="identifier">dodge</span><span>)
-  .</span><span class="identifier">on</span><span>(</span><span class="identifier">green</span><span>)</span></code></pre>
-<p>This produces the following:</p>
-<div class="doodle" id="polygons"></div>
-<script>SvgBlendModes.polygons("polygons")</script>
-<p>The following picture shows examples of all the blend modes, where the red and blue circles are placed on top of the green circle and both blended with the given mode.</p>
-<div class="doodle" id="blend-table"></div>
-<script>SvgBlendModes.table("blend-table")</script>
+<p>The SVG backend supports <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/blend-mode">CSS-style blend modes</a>.
+See the <a href="../pictures/blend.html">general blend mode documentation</a> for a description of the available blend modes and usage examples.</p>
 
 <h2 id="implementation-notes" class="section">Implementation Notes</h2>
 <p>Blend modes are rendered using the <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/mix-blend-mode">CSS <code>mix-blend-mode</code></a> property. At the time of writing there are still a few browsers, mainly on mobile devices, that don&#39;t support this feature on SVG elements. Check <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/mix-blend-mode#browser_compatibility">compatibility</a> for your use case.</p></div>
@@ -252,7 +210,6 @@ but by changing the blend mode you can make the two colors interact in creative 
         <div class="max-h-[calc(100vh-6rem)] overflow-y-auto">
           <p>On This Page</p>
           <ul class="nav-list">
-            <li class="level1 nav-leaf"><a href="#using-blend-modes">Using Blend Modes</a></li>
             <li class="level1 nav-leaf"><a href="#implementation-notes">Implementation Notes</a></li>
           </ul>
         </div>
